Fixed text align and page navigation

--- a/codice/public/css/blog-post.css
+++ b/codice/public/css/blog-post.css
@@ -6,3 +6,8 @@
 body {
   padding-top: 56px;
 }
+
+.justify {
+  text-align: justify;
+  text-justify: inter-word;
+}
